fixed register overflow bug

--- a/packages/client/src/pages/auth/register/style.scss
+++ b/packages/client/src/pages/auth/register/style.scss
@@ -1,11 +1,9 @@
 .register-page-container {
   margin-top: 40px;
-  max-height: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  overflow: auto;
 }
 
 .avatar-tab-menu {
