--- a/packages/client/src/pages/auth/style.scss
+++ b/packages/client/src/pages/auth/style.scss
@@ -1,6 +1,9 @@
 .auth-page-container {
   max-width: 450px;
   width: 100%;
+  max-height: 700px;
+  overflow: auto;
+  margin-bottom: 10px;
 }
 
 .auth-content-container {
